--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -14,8 +14,8 @@ fieldset,img{border:0}
 img {
   width: 100%;
   display: block;
-  object-fit: cover;
-  object-position: center center;
+  // object-fit: cover;
+  // object-position: center center;
 }
 article,aside,footer,header,section,nav,figure,figcaption,hgroup,details,menu{display:block}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
